--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,46 @@
-*{ font-family: Arial, Helvetica, sans-serif;
-
-font-size: 16px;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
-body{ background-color: blueviolet;
+body {
+    background-color: rgb(4, 2, 8);
+}
+h1{
+    font-size: 25px;
+}
+h2{font-size: 20px;
+color: red;}
 
+main {
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    width: 500px;
+    padding: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+    text-align: center;
 }
 
-main{ background-color: white;
+.container 
+{color: white;
+    text-align: center;
+    max-width: 700px;
+    margin: auto;}
 
-margin: auto;
-width: 500px;
-padding: 10px;
-box-shadow: 3px 3px 5px rgba(0,0,0,0.473) ;
+
+.imagens {width: 500px;
+    text-align: center;
+    padding: 10px;
+}
+
+article { text-align: center;
+color: white;}
+
+.assinatura{
+     color: white;
+    margin: auto;
+    right: 1000px;
+    padding: 5px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.473);
+    text-align: center;
 }
